--- a/resources/postcss/attachments.pcss
+++ b/resources/postcss/attachments.pcss
@@ -91,6 +91,10 @@
                 padding: 0;
             }
 
+            .justify-center {
+                justify-content: center;
+            }
+
             header {
                 h2 {
                     margin: 0;
