--- a/resources/scss/attachments.scss
+++ b/resources/scss/attachments.scss
@@ -1,5 +1,6 @@
 $light-gray: #e6e6e6 !default;
 $dark-gray: #8a8a8a !default;
+$black: #0a0a0a !default;
 .attachments {
     &.list {
         display: flex;
