--- a/resources/scss/attachments.scss
+++ b/resources/scss/attachments.scss
@@ -1,6 +1,7 @@
 $light-gray: #e6e6e6 !default;
 $dark-gray: #8a8a8a !default;
 $black: #0a0a0a !default;
+$fl-blue: #46a9d7;
 .attachments {
     &.list {
         display: flex;
